--- a/index.html
+++ b/index.html
@@ -2,264 +2,163 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Köppen-Geiger Globe</title>
+  <title>Köppen-Geiger Globe with Labels</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+
+  <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.1/mapbox-gl-geocoder.min.js"></script>
+  <link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.1/mapbox-gl-geocoder.css" rel="stylesheet" />
+
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700;900&display=swap" rel="stylesheet">
+
   <style>
-    html, body,
-    #controlWrapper,
-    .toggle-button,
-    #opacityControls,
-    #legendContainer,
-    input[type=range],
-    .mapboxgl-ctrl,
-    .mapboxgl-popup-content {
-      font-family: 'Ubuntu', sans-serif !important;
+    html, body, #map {
+      margin: 0; padding: 0; height: 100%; font-family: 'Ubuntu', sans-serif;
     }
-
-    .mapboxgl-popup-content a {
-      display: block;
-      text-decoration: none;
-      color: inherit;
-      width: 100%;
-      height: 100%;
-    }
-
-    html, body { margin: 0; padding: 0; height: 100%; }
     #map { width: 100%; height: 100%; }
 
     #controlWrapper {
       position: absolute;
       top: 10px;
       left: 10px;
-      background: white;
+      background: rgba(255,255,255,0.85);
+      backdrop-filter: blur(6px);
       padding: 8px 12px;
       border-radius: 6px;
       box-shadow: 0 0 6px rgba(0,0,0,0.15);
       z-index: 1000;
       max-width: 300px;
     }
-
-    .toggle-button {
-      display: block;
-      cursor: pointer;
-      background: none;
-      border: none;
-      font-size: 18px;
-      width: fit-content;
-      text-align: left;
-      padding: 6px 0;
-    }
-
-    #opacityControls,
-    #legendContainer {
-      margin-top: 6px;
-      display: none;
-    }
-
-    #opacitySlider { width: 100%; }
-
-    #legendContainer img {
-      height: 40vh;
-      width: auto;
-      max-width: 100%;
-      object-fit: contain;
-      display: block;
-      margin: 0 auto;
-    }
-
-    .popup-image {
-      max-width: 100%;
-      max-height: 150px;
-      display: block;
-      margin-top: 6px;
-    }
-
-    /* Base style for zone labels */
-    .zone-text {
-      line-height: 1.25;
-      display: inline-block;
-    }
-
-    /* Stroke appears only when JS adds .stroke for bright colours */
+    .toggle-button { display: block; cursor: pointer; background: none; border: none; font-size: 18px; width: fit-content; text-align: left; padding: 6px 0; }
+    #opacityControls, #legendContainer { margin-top: 6px; display: none; }
+    #opacitySlider, #referenceSlider { width: 100%; }
+    #legendContainer img { height: 40vh; width: auto; max-width: 100%; display: block; margin: 0 auto; }
+    .popup-image { max-width: 100%; max-height: 150px; display: block; margin-top: 6px; }
+    .zone-text { line-height: 1.25; display: inline-block; }
     .zone-text.stroke {
       -webkit-text-stroke: 0.35px rgba(0,0,0,0.85);
-      /* Firefox fallback: subtle 8-direction shadow to mimic stroke */
       text-shadow:
-        0.3px 0   0 rgba(0,0,0,0.85),
-       -0.3px 0   0 rgba(0,0,0,0.85),
-        0   0.3px 0 rgba(0,0,0,0.85),
-        0  -0.3px 0 rgba(0,0,0,0.85),
-        0.21px  0.21px 0 rgba(0,0,0,0.85),
-       -0.21px  0.21px 0 rgba(0,0,0,0.85),
+        0.3px 0 0 rgba(0,0,0,0.85),
+       -0.3px 0 0 rgba(0,0,0,0.85),
+        0 0.3px 0 rgba(0,0,0,0.85),
+        0 -0.3px 0 rgba(0,0,0,0.85),
+        0.21px 0.21px 0 rgba(0,0,0,0.85),
+       -0.21px 0.21px 0 rgba(0,0,0,0.85),
         0.21px -0.21px 0 rgba(0,0,0,0.85),
        -0.21px -0.21px 0 rgba(0,0,0,0.85);
     }
-
-    @media (max-width: 600px) {
-      #controlWrapper {
-        max-width: 200px;
-        padding: 6px 10px;
-      }
-      .toggle-button {
-        font-size: 14px;
-        padding: 4px 0;
-      }
-    }
+    @media (max-width:600px){#controlWrapper{max-width:200px;padding:6px 10px}.toggle-button{font-size:14px;padding:4px 0}}
   </style>
 </head>
 <body>
-  <div id="map"></div>
+<div id="map"></div>
 
-  <div id="controlWrapper">
-    <button id="toggleOpacity" class="toggle-button">Show Climate Zones</button>
-    <div id="opacityControls">
-      <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.5" />
-    </div>
-
-    <button id="toggleLegend" class="toggle-button">Show Legend</button>
-    <div id="legendContainer">
-      <img src="./legend.jpg" alt="Climate Zones Legend" />
-    </div>
+<div id="controlWrapper">
+  <button id="toggleOpacity" class="toggle-button">Show Climate Zones</button>
+  <div id="opacityControls">
+    <label for="opacitySlider">Köppen overlay</label>
+    <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.5" />
+    <label for="referenceSlider">Place/road overlay</label>
+    <input type="range" id="referenceSlider" min="0" max="1" step="0.05" value="0.6" />
   </div>
+  <button id="toggleLegend" class="toggle-button">Show Legend</button>
+  <div id="legendContainer">
+    <img src="./legend.jpg" alt="Köppen climate zones legend" />
+  </div>
+</div>
 
-  <script>
-    // --- Colour brightness helpers ---
-    function hexToRgb(hex) {
-      if (!hex) return null;
-      let c = hex.trim();
-      if (c[0] === '#') c = c.slice(1);
-      if (c.length === 3) c = c.split('').map(ch => ch + ch).join('');
-      if (c.length !== 6 || /[^0-9a-f]/i.test(c)) return null;
-      const num = parseInt(c, 16);
-      return { r: (num >> 16) & 255, g: (num >> 8) & 255, b: num & 255 };
-    }
-    // Perceived brightness (0..1), BT.601 luma
-    function brightnessFromHex(hex) {
-      const rgb = hexToRgb(hex);
-      if (!rgb) return 0.5;
-      const { r, g, b } = rgb;
-      return ((r * 299) + (g * 587) + (b * 114)) / (255000);
-    }
+<script>
+mapboxgl.accessToken = 'pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
 
-    // Stroke only for bright colours
-    const BRIGHTNESS_THRESHOLD = 0.75;
+const map = new mapboxgl.Map({
+  container: 'map',
+  style: 'mapbox://styles/mapbox/satellite-streets-v12',
+  projection: 'globe',
+  zoom: 1.5,
+  center: [39.271406, -7.046950]
+});
+map.on('style.load', () => map.setFog({}));
 
-    function createGeoJSONCircle(center, radiusKm, points = 64) {
-      const lat = center[1], lon = center[0];
-      const coords = [];
-      const dX = radiusKm / (111.32 * Math.cos(lat * Math.PI / 180));
-      const dY = radiusKm / 110.574;
-      for (let i = 0; i < points; i++) {
-        const θ = 2 * Math.PI * i / points;
-        coords.push([lon + dX * Math.cos(θ), lat + dY * Math.sin(θ)]);
+// --- Geocoder ---
+const geocoder = new MapboxGeocoder({ accessToken: mapboxgl.accessToken, mapboxgl: mapboxgl, marker: false, placeholder:'Search for a place'});
+map.addControl(geocoder, 'top-left');
+
+// --- Köppen overlay ---
+map.on('load', () => {
+  map.addSource('koppen',{type:'geojson', data:'./koppen.json'});
+  map.addLayer({id:'koppen-layer', type:'fill', source:'koppen', paint:{'fill-color':['get','fill'], 'fill-opacity':0.5}});
+
+  // Adjust opacity of all label layers (places, roads)
+  const layers = map.getStyle().layers;
+  layers.forEach(layer=>{
+    if(layer.type==='symbol') map.setPaintProperty(layer.id,'text-opacity',0.6);
+    if(layer.type==='line') map.setPaintProperty(layer.id,'line-opacity',0.3);
+  });
+
+  // --- Pins ---
+  fetch('pins.json').then(r=>r.json()).then(points=>{
+    points.forEach(pt=>{
+      const coords=[pt.longitude, pt.latitude];
+      let zoneLines="";
+      if(pt.zones && Array.isArray(pt.zones)){
+        zoneLines=pt.zones.map(z=>{
+          const rgb=(r=>r?((r.r*299+ r.g*587+ r.b*114)/255000):0.5)( (c=>{
+            if(!c) return null; if(c[0]==='#') c=c.slice(1); if(c.length===3) c=c.split('').map(ch=>ch+ch).join(''); if(c.length!==6)return null; const num=parseInt(c,16); return {r:(num>>16)&255, g:(num>>8)&255, b:num&255}; })(z.colour) );
+          const cls=rgb>=0.75?'zone-text stroke':'zone-text';
+          return `<span class="${cls}" style="color:${z.colour};">${z.text}</span>`;
+        }).join('<br>');
       }
-      coords.push(coords[0]);
-      return { type: 'Feature', geometry: { type: 'Polygon', coordinates: [coords] } };
-    }
+      const popupHtml=`<a href="${pt.link.trim()}" target="_blank" rel="noopener noreferrer">`+
+        `<div style="font-weight:700; font-family: Ubuntu, sans-serif; line-height:1.3; text-align:center; font-size:17px; margin-bottom:4px;">${pt.title}</div>`+
+        (pt.address?pt.address+'<br>':'')+
+        zoneLines+'<br>'+
+        (pt.gdpr?'<em>Marked area is not exact.</em><br>':'')+
+        (pt.imageUrl?`<div style="text-align:center;"><img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}"/></div>`:'')+
+        `</a>`;
+      new mapboxgl.Marker({color:'#FCF5E3'}).setLngLat(coords).setPopup(new mapboxgl.Popup().setHTML(popupHtml)).addTo(map);
 
-    mapboxgl.accessToken = 'pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
-    const map = new mapboxgl.Map({
-      container: 'map',
-      style: 'mapbox://styles/mapbox/satellite-v9',
-      projection: 'globe',
-      zoom: 1.5,
-      center: [39.271406, -7.046950],
-      pitch: 0,
-      bearing: 0
+      if(pt.gdpr){
+        const circle=(c=>{
+          const lat=c[1], lon=c[0]; const coords=[]; const dX=pt.radiusKm/(111.32*Math.cos(lat*Math.PI/180)); const dY=pt.radiusKm/110.574;
+          for(let i=0;i<64;i++){ const θ=2*Math.PI*i/64; coords.push([lon+dX*Math.cos(θ),lat+dY*Math.sin(θ)]);}
+          coords.push(coords[0]); return {type:'Feature', geometry:{type:'Polygon', coordinates:[coords]}};
+        })(coords);
+        const id=`circle-${pt.id}`;
+        map.addSource(id,{type:'geojson',data:circle});
+        map.addLayer({id:`${id}-fill`, type:'fill', source:id, paint:{'fill-color':'#ffffff','fill-opacity':0.15}});
+        map.addLayer({id:`${id}-line`, type:'line', source:id, paint:{'line-color':'#ffffff','line-width':1}});
+      }
     });
+  });
 
-    map.on('style.load', () => map.setFog({}));
+  // --- Navigation ---
+  map.addControl(new mapboxgl.NavigationControl({showCompass:false}),'top-right');
+});
 
-    map.on('load', () => {
-      map.addSource('koppen', { type: 'geojson', data: './koppen.json' });
-      map.addLayer({
-        id: 'koppen-layer',
-        type: 'fill',
-        source: 'koppen',
-        paint: { 'fill-color': ['get', 'fill'], 'fill-opacity': 0.5 }
-      });
+// --- Opacity sliders ---
+document.getElementById('opacitySlider').addEventListener('input', e=>{
+  map.setPaintProperty('koppen-layer','fill-opacity',parseFloat(e.target.value));
+});
+document.getElementById('referenceSlider').addEventListener('input', e=>{
+  const val=parseFloat(e.target.value);
+  const layers=map.getStyle().layers;
+  layers.forEach(layer=>{
+    if(layer.type==='symbol') map.setPaintProperty(layer.id,'text-opacity',val);
+    if(layer.type==='line') map.setPaintProperty(layer.id,'line-opacity',val*0.5);
+  });
+});
 
-      document.getElementById('opacitySlider').addEventListener('input', e => {
-        map.setPaintProperty('koppen-layer', 'fill-opacity', parseFloat(e.target.value));
-      });
-
-      fetch('pins.json')
-        .then(res => res.json())
-        .then(points => {
-          points.forEach(pt => {
-            const coords = [pt.longitude, pt.latitude];
-
-            let zoneLines = "";
-            if (pt.zones && Array.isArray(pt.zones)) {
-              zoneLines = pt.zones.map(z => {
-                const bright = brightnessFromHex(z.colour) >= BRIGHTNESS_THRESHOLD;
-                const cls = bright ? 'zone-text stroke' : 'zone-text';
-                return `<span class="${cls}" style="color:${z.colour};">${z.text}</span>`;
-              }).join('<br>');
-            } else if (pt.zoneText && pt.zoneColour) {
-              const bright = brightnessFromHex(pt.zoneColour) >= BRIGHTNESS_THRESHOLD;
-              const cls = bright ? 'zone-text stroke' : 'zone-text';
-              zoneLines = `<span class="${cls}" style="color:${pt.zoneColour};">${pt.zoneText}</span>`;
-            }
-
-            const popupHtml =
-              `<a href="${pt.link}" target="_blank" rel="noopener noreferrer">` +
-              `<div style="font-weight:700; font-family: Ubuntu, sans-serif; line-height:1.3; text-align:center; font-size:17px; margin-bottom:4px;">${pt.title}</div>` +
-              (pt.address ? `${pt.address}<br>` : '') +
-              `${zoneLines}<br>` +
-              (pt.gdpr ? '<em>Marked area is not exact.</em><br>' : '') +
-              (pt.imageUrl ? `
-                <div style="text-align:center;">
-                  <img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}" />
-                </div>` : '') +
-              `</a>`;
-
-            new mapboxgl.Marker({ color: '#FCF5E3' })
-              .setLngLat(coords)
-              .setPopup(new mapboxgl.Popup().setHTML(popupHtml))
-              .addTo(map);
-
-            if (pt.gdpr) {
-              const circle = createGeoJSONCircle(coords, pt.radiusKm);
-              const id = `circle-${pt.id}`;
-              map.addSource(id, { type: 'geojson', data: circle });
-              map.addLayer({
-                id: `${id}-fill`,
-                type: 'fill',
-                source: id,
-                paint: {
-                  'fill-color': '#ffffff',
-                  'fill-opacity': 0.15
-                }
-              });
-              map.addLayer({
-                id: `${id}-line`,
-                type: 'line',
-                source: id,
-                paint: {
-                  'line-color': '#ffffff',
-                  'line-width': 1
-                }
-              });
-            }
-          });
-        });
-
-      map.addControl(new mapboxgl.NavigationControl({ showCompass: false }), 'top-right');
-    });
-
-    document.getElementById('toggleOpacity').addEventListener('click', () => {
-      const el = document.getElementById('opacityControls');
-      el.style.display = el.style.display === 'block' ? 'none' : 'block';
-    });
-
-    document.getElementById('toggleLegend').addEventListener('click', () => {
-      const el = document.getElementById('legendContainer');
-      el.style.display = el.style.display === 'block' ? 'none' : 'block';
-    });
-  </script>
+// --- UI toggles ---
+document.getElementById('toggleOpacity').addEventListener('click',()=>{
+  const el=document.getElementById('opacityControls');
+  el.style.display=el.style.display==='block'?'none':'block';
+});
+document.getElementById('toggleLegend').addEventListener('click',()=>{
+  const el=document.getElementById('legendContainer');
+  el.style.display=el.style.display==='block'?'none':'block';
+});
+</script>
 </body>
 </html>
