--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
   <meta charset="utf-8" />
   <title>Köppen-Geiger Globe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- Mapbox GL -->
+
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
 
-  <!-- Mapbox Geocoder -->
   <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.1/mapbox-gl-geocoder.min.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.1/mapbox-gl-geocoder.css" rel="stylesheet" />
 
@@ -27,18 +25,9 @@
       font-family: 'Ubuntu', sans-serif !important;
     }
 
-    .mapboxgl-popup-content a {
-      display: block;
-      text-decoration: none;
-      color: inherit;
-      width: 100%;
-      height: 100%;
-    }
-
     html, body { margin: 0; padding: 0; height: 100%; }
     #map { width: 100%; height: 100%; }
 
-    /* Controls wrapper: pushed down a bit so it does not clash with geocoder */
     #controlWrapper {
       position: absolute;
       top: 80px;
@@ -62,8 +51,7 @@
       padding: 6px 0;
     }
 
-    #opacityControls,
-    #legendContainer {
+    #opacityControls, #legendContainer {
       margin-top: 6px;
       display: none;
     }
@@ -86,35 +74,15 @@
       margin-top: 6px;
     }
 
-    /* Base style for zone labels */
-    .zone-text {
-      line-height: 1.25;
-      display: inline-block;
-    }
+    .zone-text { line-height: 1.25; display: inline-block; }
 
-    /* Stroke appears only when JS adds .stroke for bright colours */
     .zone-text.stroke {
       -webkit-text-stroke: 0.35px rgba(0,0,0,0.85);
       text-shadow:
-        0.3px 0   0 rgba(0,0,0,0.85),
-       -0.3px 0   0 rgba(0,0,0,0.85),
-        0   0.3px 0 rgba(0,0,0,0.85),
-        0  -0.3px 0 rgba(0,0,0,0.85),
-        0.21px  0.21px 0 rgba(0,0,0,0.85),
-       -0.21px  0.21px 0 rgba(0,0,0,0.85),
-        0.21px -0.21px 0 rgba(0,0,0,0.85),
-       -0.21px -0.21px 0 rgba(0,0,0,0.85);
-    }
-
-    @media (max-width: 600px) {
-      #controlWrapper {
-        max-width: 200px;
-        padding: 6px 10px;
-      }
-      .toggle-button {
-        font-size: 14px;
-        padding: 4px 0;
-      }
+        0.3px 0 0 rgba(0,0,0,0.85),
+       -0.3px 0 0 rgba(0,0,0,0.85),
+        0 0.3px 0 rgba(0,0,0,0.85),
+        0 -0.3px 0 rgba(0,0,0,0.85);
     }
   </style>
 </head>
@@ -134,26 +102,22 @@
   </div>
 
   <script>
-    // --- Colour brightness helpers ---
     function hexToRgb(hex) {
       if (!hex) return null;
       let c = hex.trim();
       if (c[0] === '#') c = c.slice(1);
       if (c.length === 3) c = c.split('').map(ch => ch + ch).join('');
-      if (c.length !== 6 || /[^0-9a-f]/i.test(c)) return null;
       const num = parseInt(c, 16);
       return { r: (num >> 16) & 255, g: (num >> 8) & 255, b: num & 255 };
     }
 
-    // Perceived brightness (0..1), BT.601 luma
     function brightnessFromHex(hex) {
       const rgb = hexToRgb(hex);
       if (!rgb) return 0.5;
       const { r, g, b } = rgb;
-      return ((r * 299) + (g * 587) + (b * 114)) / (255000);
+      return ((r * 299) + (g * 587) + (b * 114)) / 255000;
     }
 
-    // Stroke only for bright colours
     const BRIGHTNESS_THRESHOLD = 0.75;
 
     function createGeoJSONCircle(center, radiusKm, points = 64) {
@@ -170,10 +134,9 @@
     }
 
     mapboxgl.accessToken = 'pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
-
     const map = new mapboxgl.Map({
       container: 'map',
-      style: 'mapbox://styles/mapbox/satellite-streets-v12',   // imagery + labels
+      style: 'mapbox://styles/mapbox/satellite-streets-v12',
       projection: 'globe',
       zoom: 1.5,
       center: [39.271406, -7.046950],
@@ -184,7 +147,7 @@
     map.on('style.load', () => map.setFog({}));
 
     map.on('load', () => {
-      // Köppen polygons
+      // Add Köppen polygons
       map.addSource('koppen', { type: 'geojson', data: './koppen.json' });
       map.addLayer({
         id: 'koppen-layer',
@@ -193,116 +156,60 @@
         paint: { 'fill-color': ['get', 'fill'], 'fill-opacity': 0.5 }
       });
 
-      const opacitySlider = document.getElementById('opacitySlider');
-
-      // Collect label layers (place names etc.) to treat as a semi-opaque overlay
-      const labelLayerIds = [];
-      const layers = map.getStyle().layers || [];
-      layers.forEach(layer => {
-        if (
-          layer.type === 'symbol' &&
-          layer.layout &&
-          layer.layout['text-field']
-        ) {
-          labelLayerIds.push(layer.id);
-        }
-      });
-
-      function setOverlayOpacity(value) {
-        // Climate polygons
-        if (map.getLayer('koppen-layer')) {
-          map.setPaintProperty('koppen-layer', 'fill-opacity', value);
-        }
-        // Map labels (place names etc.)
-        labelLayerIds.forEach(id => {
-          if (map.getLayer(id)) {
-            map.setPaintProperty(id, 'symbol-opacity', value);
-          }
-        });
-      }
-
-      // Initialise to slider default
-      setOverlayOpacity(parseFloat(opacitySlider.value));
-
-      opacitySlider.addEventListener('input', e => {
-        const value = parseFloat(e.target.value);
-        setOverlayOpacity(value);
-      });
-
-      // Load pins
-      fetch('pins.json')
-        .then(res => res.json())
-        .then(points => {
-          points.forEach(pt => {
-            const coords = [pt.longitude, pt.latitude];
-
-            let zoneLines = "";
-            if (pt.zones && Array.isArray(pt.zones)) {
-              zoneLines = pt.zones.map(z => {
-                const bright = brightnessFromHex(z.colour) >= BRIGHTNESS_THRESHOLD;
-                const cls = bright ? 'zone-text stroke' : 'zone-text';
-                return `<span class="${cls}" style="color:${z.colour};">${z.text}</span>`;
-              }).join('<br>');
-            } else if (pt.zoneText && pt.zoneColour) {
-              const bright = brightnessFromHex(pt.zoneColour) >= BRIGHTNESS_THRESHOLD;
-              const cls = bright ? 'zone-text stroke' : 'zone-text';
-              zoneLines = `<span class="${cls}" style="color:${pt.zoneColour};">${pt.zoneText}</span>`;
-            }
-
-            const popupHtml =
-              `<a href="${pt.link}" target="_blank" rel="noopener noreferrer">` +
-              `<div style="font-weight:700; font-family: Ubuntu, sans-serif; line-height:1.3; text-align:center; font-size:17px; margin-bottom:4px;">${pt.title}</div>` +
-              (pt.address ? `${pt.address}<br>` : '') +
-              `${zoneLines}<br>` +
-              (pt.gdpr ? '<em>Marked area is not exact.</em><br>' : '') +
-              (pt.imageUrl ? `
-                <div style="text-align:center;">
-                  <img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}" />
-                </div>` : '') +
-              `</a>`;
-
-            new mapboxgl.Marker({ color: '#FCF5E3' })
-              .setLngLat(coords)
-              .setPopup(new mapboxgl.Popup().setHTML(popupHtml))
-              .addTo(map);
-
-            if (pt.gdpr) {
-              const circle = createGeoJSONCircle(coords, pt.radiusKm);
-              const id = `circle-${pt.id}`;
-              map.addSource(id, { type: 'geojson', data: circle });
-              map.addLayer({
-                id: `${id}-fill`,
-                type: 'fill',
-                source: id,
-                paint: {
-                  'fill-color': '#ffffff',
-                  'fill-opacity': 0.15
-                }
-              });
-              map.addLayer({
-                id: `${id}-line`,
-                type: 'line',
-                source: id,
-                paint: {
-                  'line-color': '#ffffff',
-                  'line-width': 1
-                }
-              });
-            }
-          });
-        });
-
-      // Standard navigation
+      // Navigation and geocoder
       map.addControl(new mapboxgl.NavigationControl({ showCompass: false }), 'top-right');
-
-      // Place search (no marker to avoid clashing with your own)
       const geocoder = new MapboxGeocoder({
         accessToken: mapboxgl.accessToken,
-        mapboxgl: mapboxgl,
+        mapboxgl,
         marker: false,
         placeholder: 'Search for a place'
       });
       map.addControl(geocoder, 'top-left');
+
+      // Add pins
+      fetch('pins.json')
+        .then(r => r.json())
+        .then(points => {
+          points.forEach(pt => {
+            const coords = [pt.longitude, pt.latitude];
+            const bright = brightnessFromHex(pt.zones?.[0]?.colour) >= BRIGHTNESS_THRESHOLD;
+            const cls = bright ? 'zone-text stroke' : 'zone-text';
+            const zoneLine = `<span class="${cls}" style="color:${pt.zones?.[0]?.colour};">${pt.zones?.[0]?.text}</span>`;
+            const popupHtml = `
+              <a href="${pt.link}" target="_blank" rel="noopener noreferrer">
+                <div style="font-weight:700;text-align:center;font-size:17px;margin-bottom:4px;">${pt.title}</div>
+                ${pt.address || ''}<br>${zoneLine}<br>
+                ${pt.gdpr ? '<em>Marked area is not exact.</em><br>' : ''}
+                ${pt.imageUrl ? `<div style="text-align:center;"><img class="popup-image" src="${pt.imageUrl}" /></div>` : ''}
+              </a>`;
+            new mapboxgl.Marker({ color: '#FCF5E3' })
+              .setLngLat(coords)
+              .setPopup(new mapboxgl.Popup().setHTML(popupHtml))
+              .addTo(map);
+            if (pt.gdpr) {
+              const circle = createGeoJSONCircle(coords, pt.radiusKm);
+              const id = `circle-${pt.id}`;
+              map.addSource(id, { type: 'geojson', data: circle });
+              map.addLayer({ id: `${id}-fill`, type: 'fill', source: id, paint: { 'fill-color': '#fff', 'fill-opacity': 0.15 } });
+              map.addLayer({ id: `${id}-line`, type: 'line', source: id, paint: { 'line-color': '#fff', 'line-width': 1 } });
+            }
+          });
+        });
+
+      // Label layers after everything is loaded
+      const labelLayerIds = map.getStyle().layers
+        .filter(l => l.type === 'symbol' && l.layout?.['text-field'])
+        .map(l => l.id);
+
+      const slider = document.getElementById('opacitySlider');
+      function setOpacity(val) {
+        const v = parseFloat(val);
+        if (map.getLayer('koppen-layer'))
+          map.setPaintProperty('koppen-layer', 'fill-opacity', v);
+        labelLayerIds.forEach(id => map.setPaintProperty(id, 'symbol-opacity', v));
+      }
+      slider.addEventListener('input', e => setOpacity(e.target.value));
+      setOpacity(slider.value);
     });
 
     document.getElementById('toggleOpacity').addEventListener('click', () => {
