--- a/index.html
+++ b/index.html
@@ -71,65 +71,86 @@
 
     <button id="toggleLegend" class="toggle-button">Show Legend</button>
     <div id="legendContainer">
-      <img src="./legend.jpg" alt="Legend">
+      <img id="legendImg" alt="Legend">
     </div>
   </div>
 
   <script>
-    // Utilities
+    // --- Auto-detect correct base path for GitHub Pages ---
+    const BASE = window.location.pathname.replace(/index\.html$/, "").replace(/\/$/, "");
+
+    const pinsURL    = BASE + "/pins.json";
+    const koppenURL  = BASE + "/koppen.json";
+    const legendURL  = BASE + "/legend.jpg";
+
+    document.getElementById("legendImg").src = legendURL;
+
+    // --- Utility functions ---
     function hexToRgb(hex){ if(!hex)return null; let c=hex.replace('#',''); if(c.length===3)c=c.split('').map(ch=>ch+ch).join(''); const n=parseInt(c,16); return{r:(n>>16)&255,g:(n>>8)&255,b:n&255}; }
     function brightnessFromHex(hex){ const rgb=hexToRgb(hex); if(!rgb)return 0.5; const{r,g,b}=rgb; return((r*299)+(g*587)+(b*114))/255000; }
     const BRIGHTNESS_THRESHOLD=0.75;
-    function createGeoJSONCircle(center,radiusKm,points=64){ const[lon,lat]=center; const coords=[]; const dX=radiusKm/(111.32*Math.cos(lat*Math.PI/180)); const dY=radiusKm/110.574; for(let i=0;i<points;i++){const θ=2*Math.PI*i/points; coords.push([lon+dX*Math.cos(θ),lat+dY*Math.sin(θ)]);} coords.push(coords[0]); return{type:'Feature',geometry:{type:'Polygon',coordinates:[coords]}};}
 
-    // Map
-    mapboxgl.accessToken='pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
-    const map=new mapboxgl.Map({
-      container:'map',
-      style:'mapbox://styles/mapbox/satellite-streets-v12',
-      projection:'globe',
-      zoom:1.5,
-      center:[39.27,-7.05]
+    function createGeoJSONCircle(center,radiusKm,points=64){
+      const[lon,lat]=center; const coords=[];
+      const dX=radiusKm/(111.32*Math.cos(lat*Math.PI/180));
+      const dY=radiusKm/110.574;
+      for(let i=0;i<points;i++){const θ=2*Math.PI*i/points; coords.push([lon+dX*Math.cos(θ),lat+dY*Math.sin(θ)]);}
+      coords.push(coords[0]);
+      return{type:'Feature',geometry:{type:'Polygon',coordinates:[coords]}};
+    }
+
+    mapboxgl.accessToken = "pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA";
+
+    const map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/mapbox/satellite-streets-v12',
+      projection: 'globe',
+      zoom: 1.5,
+      center: [39.27,-7.05]
     });
 
-    map.on('style.load',()=>map.setFog({}));
+    map.on("style.load", () => map.setFog({}));
 
-    map.on('load',async()=>{
+    map.on("load", async () => {
 
       // --- Köppen Layer ---
-      map.addSource('koppen',{type:'geojson',data:'./koppen.json'});
+      map.addSource("koppen", { type: "geojson", data: koppenURL });
       map.addLayer({
-        id:'koppen-layer',
-        type:'fill',
-        source:'koppen',
-        paint:{ 'fill-color':['get','fill'], 'fill-opacity':0.5 }
+        id: "koppen-layer",
+        type: "fill",
+        source: "koppen",
+        paint: {
+          "fill-color": ["get", "fill"],
+          "fill-opacity": 0.5
+        }
       });
 
-      // --- Navigation + Search ---
-      map.addControl(new mapboxgl.NavigationControl({showCompass:false}),'top-right');
+      // --- Nav + Search ---
+      map.addControl(new mapboxgl.NavigationControl({ showCompass:false }), "top-right");
       map.addControl(new MapboxGeocoder({
-        accessToken:mapboxgl.accessToken,
+        accessToken: mapboxgl.accessToken,
         mapboxgl,
-        marker:false
-      }),'top-left');
+        marker: false
+      }), "top-left");
 
       // --- Pins ---
-      const points = await fetch('pins.json').then(r=>r.json());
-      points.forEach(pt=>{
+      const points = await fetch(pinsURL).then(r => r.json());
+      points.forEach(pt => {
         const coords=[pt.longitude,pt.latitude];
         const bright=brightnessFromHex(pt.zones?.[0]?.colour)>=BRIGHTNESS_THRESHOLD;
         const cls=bright?'zone-text stroke':'zone-text';
-        const zone=`<span class="${cls}" style="color:${pt.zones?.[0]?.colour};">${pt.zones?.[0]?.text}</span>`;
+
+        const zone = `<span class="${cls}" style="color:${pt.zones[0].colour};">${pt.zones[0].text}</span>`;
 
         const popupHtml = `
           <a href="${pt.link}" target="_blank" rel="noopener noreferrer">
             <div style="font-weight:700;text-align:center;font-size:17px;margin-bottom:4px;">${pt.title}</div>
-            ${pt.address||''}<br>${zone}<br>
+            ${pt.address||""}<br>${zone}<br>
             ${pt.gdpr?'<em>Marked area not exact.</em><br>':''}
             ${pt.imageUrl?`<div style="text-align:center;"><img class="popup-image" src="${pt.imageUrl}"></div>`:''}
           </a>`;
 
-        new mapboxgl.Marker({color:'#FCF5E3'})
+        new mapboxgl.Marker({color:"#FCF5E3"})
           .setLngLat(coords)
           .setPopup(new mapboxgl.Popup().setHTML(popupHtml))
           .addTo(map);
@@ -137,43 +158,45 @@
         if(pt.gdpr){
           const id=`circle-${pt.id}`;
           const circle=createGeoJSONCircle(coords,pt.radiusKm);
-          map.addSource(id,{type:'geojson',data:circle});
-          map.addLayer({id:`${id}-fill`,type:'fill',source:id,paint:{'fill-color':'#fff','fill-opacity':0.15}});
-          map.addLayer({id:`${id}-line`,type:'line',source:id,paint:{'line-color':'#fff','line-width':1}});
+          map.addSource(id,{type:"geojson",data:circle});
+          map.addLayer({ id:`${id}-fill`, type:"fill", source:id, paint:{ "fill-color":"#fff", "fill-opacity":0.15 }});
+          map.addLayer({ id:`${id}-line`, type:"line", source:id, paint:{ "line-color":"#fff", "line-width":1 }});
         }
       });
 
-      // --- After style settles, collect label layers ---
+      // --- Label Opacity Control ---
       map.once("idle", () => {
         const labelIds = map.getStyle().layers
-          .filter(l => l.type === "symbol" && l.layout?.["text-field"])
+          .filter(l => l.type==="symbol" && l.layout?.["text-field"])
           .map(l => l.id);
 
         const slider = document.getElementById("opacitySlider");
-        const setOpacity = v => {
-          const val = parseFloat(v);
+        const setOpacity = val => {
+          const v=parseFloat(val);
           if(map.getLayer("koppen-layer"))
-            map.setPaintProperty("koppen-layer","fill-opacity",val);
-          labelIds.forEach(id=>{
+            map.setPaintProperty("koppen-layer","fill-opacity",v);
+
+          labelIds.forEach(id => {
             if(map.getLayer(id))
-              map.setPaintProperty(id,"symbol-opacity",val);
+              map.setPaintProperty(id,"symbol-opacity",v);
           });
         };
 
-        slider.addEventListener("input", e => setOpacity(e.target.value));
+        slider.addEventListener("input",e => setOpacity(e.target.value));
         setOpacity(slider.value);
       });
     });
 
-    // UI Buttons
-    document.getElementById('toggleOpacity').onclick=()=>{
-      const el=document.getElementById('opacityControls');
-      el.style.display = el.style.display==='block' ? 'none' : 'block';
+    // UI
+    document.getElementById("toggleOpacity").onclick = () => {
+      const el = document.getElementById("opacityControls");
+      el.style.display = el.style.display==="block" ? "none" : "block";
     };
-    document.getElementById('toggleLegend').onclick=()=>{
-      const el=document.getElementById('legendContainer');
-      el.style.display = el.style.display==='block' ? 'none' : 'block';
+    document.getElementById("toggleLegend").onclick = () => {
+      const el = document.getElementById("legendContainer");
+      el.style.display = el.style.display==="block" ? "none" : "block";
     };
   </script>
+
 </body>
 </html>
